--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -4,3 +4,5 @@
 @import './pages/home';
 @import './components/leftNav';
 @import './components/thread';
+@import './components/widgetsContainer';
+@import './components/widget';
