--- a/client/src/styles/components/_leftNav.scss
+++ b/client/src/styles/components/_leftNav.scss
@@ -1,6 +1,6 @@
 .leftnav {
   border-right: 1px solid $border-color;
-  width: 400px;
+  width: 30%;
   height: 800px;
   padding-left: 125px;
   padding-top: 20px;
@@ -9,12 +9,129 @@
     color: $text-color;
   }
 
+  .hidden {
+    display: none;
+  }
+
+  .hidden-menu-container {
+    .hidden-hover {
+      height: 100%;
+      width: 100%;
+      position: absolute;
+      display: flex;
+      left: 0;
+      top: 0;
+
+      .hidden-menu {
+        height: 100%;
+        width: 22%;
+        background-color: #161618;
+        padding: 15px;
+
+        .hidden-menu-header {
+          margin-bottom: 20px;
+          padding-bottom: 10px;
+          border-bottom: 1px solid $border-color;
+        }
+
+        * {
+          color: white;
+        }
+
+        .profil-close {
+          display: flex;
+          justify-content: space-between;
+          margin-bottom: 20px;
+
+          span {
+            color: $text-color;
+            border-radius: 50%;
+            transition: background-color 0.2s ease;
+            width: 35px;
+            height: 35px;
+
+            &:hover {
+              background-color: $hover-color;
+              color: $blue;
+            }
+          }
+
+          * {
+            cursor: pointer;
+          }
+        }
+
+        h4 {
+          font-size: 1.2rem;
+          margin-bottom: 8px;
+          cursor: pointer;
+
+          span {
+            font-size: 1.2rem;
+          }
+
+          &:hover {
+            text-decoration: underline;
+          }
+        }
+
+        h5 {
+          color: $text-color;
+          margin-bottom: 10px;
+          cursor: pointer;
+
+          &:hover {
+            color: $blue;
+            text-decoration: underline;
+          }
+        }
+
+        li {
+          cursor: pointer;
+          transition: background-color 0.2s ease;
+          border-radius: 25px;
+          padding: 5px;
+
+          span {
+            font-size: 1.3rem;
+            margin-top: 3px;
+          }
+
+          display: flex;
+          margin-bottom: 20px;
+
+          h3 {
+            margin-left: 20px;
+          }
+
+          &:hover {
+            background-color: $hover-color;
+            transition: background-color 0.2s ease;
+
+            span,
+            h3 {
+              color: $blue;
+            }
+          }
+        }
+      }
+
+      .black-hover {
+        z-index: 1000;
+        width: 78%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.7);
+      }
+    }
+  }
+
   span {
     font-size: 2.1rem;
   }
 
   .active {
-    span, h2 {
+    span,
+    h2 {
       color: white;
     }
   }
@@ -46,8 +163,9 @@
       background-color: $hover-color;
       transition: background-color 0.2s ease;
 
-      span, h2 {
-        color: $blue
+      span,
+      h2 {
+        color: $blue;
       }
     }
   }
