Add comments and medias zoom

--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -6,3 +6,5 @@
 @import './components/thread';
 @import './components/widgetsContainer';
 @import './components/widget';
+@import './components/comments';
+@import './components/popupmenu';
