--- a/client/src/styles/components/_thread.scss
+++ b/client/src/styles/components/_thread.scss
@@ -15,7 +15,6 @@
   }
 
   .scroll-part {
-    position: relative;
     left: 0%;
     height: 100%;
     overflow-y: scroll;
@@ -68,7 +67,7 @@
       font-size: 1.2rem;
     }
 
-    img {
+    .post-media {
       margin-top: 10px;
       height: 450px;
       width: 100%;
@@ -93,6 +92,49 @@
       color: white;
       margin-left: 15px;
       font-size: 0.9rem;
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    .medias-hover {
+      position: absolute;
+      display: flex;
+      justify-content: space-between;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      z-index: 1000;
+      background-color: rgba(0, 0, 0, 0.7);
+
+
+      img {
+        height: auto;
+        width: auto;
+      }
+
+      span {
+        position: relative;
+        color: $text-color;
+        font-size: 2rem;
+        top: 45%;
+        height: 50px;
+        cursor: pointer;
+
+        &:hover {
+          color: white;
+        } 
+      }
+
+      .close {
+        position: absolute;
+        right: 0%;
+        top: 0%;
+        margin-top: 30px;
+        margin-right: 30px;
+      }
     }
   }
 }
