--- a/client/src/styles/index.scss
+++ b/client/src/styles/index.scss
@@ -8,3 +8,4 @@
 @import './components/widget';
 @import './components/comments';
 @import './components/popupmenu';
+@import './components/newpost';
