--- a/client/src/styles/components/_thread.scss
+++ b/client/src/styles/components/_thread.scss
@@ -12,6 +12,10 @@
     text-transform: uppercase;
     font-size: 1.6rem;
     padding: 10px;
+
+    span {
+      cursor: pointer;
+    }
   }
 
   .scroll-part {
@@ -44,11 +48,18 @@
         margin-left: 10px;
       }
 
+      span {
+        position: absolute;
+        right: 0%;
+        top: -8%;
+        margin-right: 10px;
+        cursor: pointer;
+      }
+
       h6 {
         font-size: 0.8rem;
         position: absolute;
-        right: 0%;
-        margin-right: 10px;
+        right: 8%;
       }
 
       img {
